$Id: ChangeLog,v 1.202 2005/04/28 16:26:31 haraldkipp Exp $

2005-04-28  Harald Kipp  <harald.kipp@egnite.de>

	* configure.ac, Makefile.am, doc/Makefile.am, 
	doc/gen/Makefile.am, tools/crurom/Makefile.am, 
	tools/nutconf/Makefile.am: Support for autoconf/automake
	added. This is far from working perfect, but at least
	builds an installation on Fedora Core 3.

	* AUTHORS COPYING INSTALL NEWS: Standard distribution doc files
	added.

	* reconf: Helper script for package building added.

	* doc/gen/nut_en.cfg.in: Replaces nut_en.cfg, which is now
	created by autoconf.

	* tools/packaging/ethernut.spec.in: Replaces the previous
	rpm spec, which is now created by autoconf.

	* configure: This file stands in the way of autoconf and has
	been renamed to nutsetup. Hopefully the executable permission
	will now be preserved.

	* Makefile: This file stands in the way of automake and has
	been moved to the lib subdirectory. If you are building in the
	source tree, then you must cd to lib first before running make.

	* tools/crurom/crurom.c, tools/nutconf/nutcomponent.c: 
	Include autoheader file.

	* nut/tools/nutconf/repoptdlg.cpp: No idea why OFN_HIDEREADONLY
	is undefined on Fedora. File dialog option removed.


2005-04-26  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/enumeditctrl.cpp, tools/nutconf/enumeditctrl.h: 
	Workaround for wxChoice focus bug on GTK+ added.

	* tools/nutconf/scrolledtree.cpp, tools/nutconf/valuewindow.cpp: 
	Minor wxWidgets runtime warning avoided.


2005-04-25  Harald Kipp  <harald.kipp@egnite.de>

	* tools/nutconf/configtree.cpp: Compile fix for the new
	wxWidgets 2.6.0.


2005-04-22  Harald Kipp  <harald.kipp@egnite.de>

	* app/Makeburn.avr-dude: Support for avrdude, kindly provided by
	Martin Thomas.

	* tools/nutconf/nutcomponent.c, tools/nutconf/nutconf.h: 
	Version 1.2.1 can now run without GUI or with wxWidgets 2.5.5.

	* tools/nutconf/appoptdlg.cpp, tools/nutconf/bldoptdlg.cpp,